Fixed css issue for linkified images being too tall. #75 and #111.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3331,7 +3331,7 @@ div.topic-list-card, div.group-list-card {
 
     img {
       max-width: 100%;
-      max-height: 90%;
+      max-height: 420px;
       display: inline-block;
     }
   }
